# i-live-sdk

./: .gitignore  README.md  generate_pitch.py
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_customer_and_bvn.py  003_add_face_verification_and_channel.py  004_add_api_keys.py
backend/app/: auth_utils.py  config.py  database.py  main.py  models.py  redis_cache.py
backend/app/routers/: auth_router.py  liveness_router.py
backend/app/services/: liveness_service.py
backend/tests/: test_liveness.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
docs/: api_reference.md  architecture.md  aws_setup.md  sdk_guide.md  security.md
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts  gradle.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
liveness_sdk/: pubspec.yaml
liveness_sdk/lib/: kolomoni_liveness_sdk.dart
liveness_sdk/lib/src/models/: liveness_config.dart  liveness_result.dart
liveness_sdk/lib/src/providers/: aws_rekognition_provider.dart  liveness_provider.dart  mock_liveness_provider.dart
liveness_sdk/lib/src/ui/: amplify_liveness_camera_view.dart  google_mlkit_camera_view.dart  liveness_camera_view.dart
(+1 files in other folders)
